# WhatTheFridge

./: .gitignore  README.md  SETUP.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  state.py
backend/app/models/: schemas.py
backend/app/services/: gemini_service.py  image_service.py  web_search_service.py  youtube_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  IngredientInput.css  IngredientInput.jsx  RecipeCard.css  RecipeCard.jsx
